--- a/other/zd.htm
+++ b/other/zd.htm
@@ -16,29 +16,29 @@
 <a href="https://www.firefox.com.cn/">
   <h1 style="text-align: center; color: skyblue">FIREFOX</h1>
 </a>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
-<audio src="res/S/zd.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
+<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/s/bbblckck%20-%20Zood.flac" loop width="49.5%" autoplay poster="res/lod.gif"></audio>
 
 </html>
