--- a/F.htm
+++ b/F.htm
@@ -8,9 +8,9 @@
             background-size: cover;
         ">
   <a href="https://b23.tv/XHcyC6b">
-    <img width="100%" src="res/F.02.jpg" />
+    <img width="100%" src="https://github.com/UTAC99645/file.put/blob/main/res/F.02.jpg?raw=true" />
   </a>
-  <audio src="res/S/F.01.mp3" autoplay></audio>
+  <audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/v/F.01.mp4" autoplay></audio>
 </body>
 
 </html>
