--- a/big.tes.htm
+++ b/big.tes.htm
@@ -6,8 +6,8 @@
   <h1 style="color: skyblue">
     BIG.TEST
   </h1>
-  <video width="100%" controls src="res/V/E.01.mp4" poster="res/Lod.gif">
-  </video>
+<video controls width="100%" autoplay src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/v/rrg.mp4">
+</video>
   <br>
   <hr />
   <h1 style="color: skyblue">
