--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
     </a>
   </h1>
   <a href="DE.htm">
-    <img src="res/1.jpg" width="100%" />
+    <img src="res/DE/1.jpg" width="50%" />
   </a>
   <a href="F.htm">
-    <img src="res/F.02.jpg" width="100%" />
+    <img src="https://github.com/UTAC99645/file.put/blob/main/res/F.02.jpg?raw=true" width="49%" />
   </a>
   <table>
     <tr>
       <video autoplay poster="res/Lod.gif" width="50%" loop>
-        <source src="res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
+        <source src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
       </video>
     </tr>
     <tr>
       <video autoplay poster="res/Lod.gif" width="50%" loop>
-        <source src="res/bau.mp4" type="video/mp4">
+        <source src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/bau.mp4" type="video/mp4">
       </video>
     </tr>
   </table>
