--- a/test.htm
+++ b/test.htm
@@ -6,9 +6,8 @@
         background-size: cover;
     ">
 
-<body style="height: 100%;width: 100%;position=relative">
-  <video src="res/V/Y.M.C.A.mp4" height="100%" width="100%" style="object-fit: cover; position: absolute; top: 0; left: 0" autoplay="autoplay"
-                                                                                                                          loop="loop"></video>
+<body style="height: 100%;width: 100%;position: relative">
+
 </body>
 
 </html>
