--- a/DE.htm
+++ b/DE.htm
@@ -1,4 +1,4 @@
-<html style="background-image:url(https://nmgimg.www.panguidc.com/2024/08/24/0e4832d547fc16e4aadca119ba8fce63.png);
+<html style="background-image:url(https://utac99645.github.io/file.put/bg/DE.png);
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
   <link rel="stylesheet" href="about/S/c.css">
