--- a/F.htm
+++ b/F.htm
@@ -1,16 +1,16 @@
 <html>
 
 <body style="
-            background-image: url(&quot;http://www.panguidc.com/images/2024/08/20/83cf87fb1c2a4751791253e7754d7e01.jpg&quot;);
+            background-image: url(https://utac99645.github.io/file.put/bg/F.png);
             background-repeat: no-repeat;
             background-position: center center;
             background-attachment: fixed;
             background-size: cover;
         ">
   <a href="https://b23.tv/XHcyC6b">
-    <img width="100%" src="https://github.com/UTAC99645/file.put/blob/main/res/F.02.jpg?raw=true" />
+    <img width="100%" src="https://utac99645.github.io/file.put/res/F.02.jpg" />
   </a>
-  <audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/v/F.01.mp4" autoplay></audio>
+  <audio src="https://utac99645.github.io/file.put/res/v/F.01.mp4" autoplay></audio>
 </body>
 
 </html>
