--- a/about/lu.htm
+++ b/about/lu.htm
@@ -1,5 +1,5 @@
 <html style="
-        background-image: url(&quot;http://www.panguidc.com/images/2024/08/21/d20ef04ea1cabb2a1f6a6cd7899a3878.png&quot;);
+        background-image: url(https://utac99645.github.io/file.put/bg/lu.png);
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
@@ -13,25 +13,25 @@
 <h1 style="text-align: center; color: yellow">斐济仙人</h1>
 <hr />
 <a href="https://www.123pan.com/s/nrbLVv-5BoI.html">
-  <img src="https://github.com/UTAC99645/file.put/blob/main/res/L/pac.png?raw=true" width="25%" hspace="37.5%" />
+  <img src="https://utac99645.github.io/file.put/res/L/pac.png" width="25%" hspace="37.5%" />
 </a>
 <a href="https://picawang.com/">
   <h1 style="text-align: center; color: yellow">哔咔 PicACG</h1>
 </a>
 <a href="https://www.123pan.com/s/nrbLVv-qBoI.html">
-  <img src="https://github.com/UTAC99645/file.put/blob/main/res/L/pe.png?raw=true" width="25%" hspace="37.5%" />
+  <img src="https://utac99645.github.io/file.put/res/L/pe.png" width="25%" hspace="37.5%" />
 </a>
 <a href="https://github.com/Notsfsssf/pixez-flutter;color: yellow">
   <h1 style="text-align: center; color: yellow">pixez</h1>
 </a>
 <a href="https://www.123pan.com/s/nrbLVv-6BoI.html">
-  <img src="https://github.com/UTAC99645/file.put/blob/main/res/L/jm.png?raw=true" width="25%" hspace="37.5%" />
+  <img src="https://utac99645.github.io/file.put/res/L/jm.png" width="25%" hspace="37.5%" />
 </a>
 <a href="https://18comic.vip/">
   <h1 style="text-align: center; color: yellow">禁漫天堂</h1>
 </a>
 <a href="https://www.123pan.com/s/nrbLVv-yBoI.html">
-  <img src="https://github.com/UTAC99645/file.put/blob/main/res/L/pic.png?raw=trueS" width="25%" hspace="37.5%" />
+  <img src="https://utac99645.github.io/file.put/res/L/pic.png" width="25%" hspace="37.5%" />
 </a>
 <a href="https://github.com/wgh136/PicaComic">
   <h1 style="text-align: center; color: yellow">PicaComic</h1>
