--- a/about/power.htm
+++ b/about/power.htm
@@ -1,5 +1,5 @@
 <html style="
-        background-image: url(http://www.panguidc.com/images/2024/08/20/20b9d8dd92df70a7ead4bbccf27ed8e0.png);
+        background-image: url(https://utac99645.github.io/file.put/bg/power.png);
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
@@ -10,10 +10,10 @@
   支持
 </title>
 <a href="!.htm">
-  <img id="1" hspace="12.5%" src="https://github.com/UTAC99645/file.put/blob/main/res/m/mmexport1726464600772.png?raw=true" width="75%" />
+  <img id="1" hspace="12.5%" src="https://utac99645.github.io/file.put/res/m/webwxgetmsgimg.jpg" width="75%" />
 </a>
 <h1 style="text-align: center; color: greenyellow">POWER BY</h1>
 <h1 style="text-align: center; color: greenyellow">斐济仙人</h1>
-<audio src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/m/DThe-Tale-of-a-Cruel-World.flac?raw=true" autoplay loop></audio>
+<audio src="none" autoplay loop></audio>
 
 </html>
