--- a/about/work.htm
+++ b/about/work.htm
@@ -1,9 +1,10 @@
-<html style="background-image:url(https://nmgimg.www.panguidc.com/2024/08/23/cfb427ffad4f7b9043810e84ca13e78d.jpg);
+<html style="background-image:url(https://utac99645.github.io/file.put/bg/work.png);
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
 
 <head>
   <link rel="stylesheet" href="S/c.css">
+  <link rel="stylesheet" href="S/color.css">
   <style>
     img{
       clear: both;
