--- a/big.tes.htm
+++ b/big.tes.htm
@@ -1,24 +1,16 @@
 <html>
 
-<body style="background-image:url('http://www.panguidc.com/images/2024/08/20/c2c161cb4685d5d3d30f50badafbddf7.png');
+<body style="background-image:url(https://utac99645.github.io/file.put/bg/big.test.png);
   background-repeat:no-repeat; background-position:center center;
   background-attachment:fixed; background-size:cover;">
   <h1 style="color: skyblue">
     BIG.TEST
   </h1>
-<video controls width="100%" autoplay src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/v/rrg.mp4">
+  <hr>
+<video controls width="100%" autoplay src="https://utac99645.github.io/file.put/res/v/rrg.mp4">
 </video>
   <br>
   <hr />
-  <h1 style="color: skyblue">
-    <a href="other/other.htm">
-      OTHER
-    </a>
-    <br>
-    <a href="other/zd.htm">
-      zood
-    </a>
-  </h1>
 </body>
 
 </html>
