--- a/c.htm
+++ b/c.htm
@@ -1,4 +1,4 @@
-<html style="background-image:url(https://nmgimg.www.panguidc.com/2024/08/24/7b44214b540b6ae9b708f13460a1e58c.jpg);
+<html style="background-image:url(https://utac99645.github.io/file.put/bg/c.png);
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
 
@@ -16,7 +16,7 @@ background-attachment:fixed; background-size:cover;">
     (59X60+35)
   </h1>
   <img src="res/Lod.gif" width="100%" alt="loding.....">
-  <audio src="res/S/vd.m4a" autoplay loop>
+  <audio src="https://utac99645.github.io/file.put/res/s/vd.m4a" autoplay loop>
   </audio>
 </body>
 </html>
