--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="sh/js.js"></script>
 </head>
 
-<body style="background-image: url(https://nmgimg.www.panguidc.com/2024/09/17/49d2a162f187abc664f91b0b53659cbc.png);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
+<body style="background-image: url(https://utac99645.github.io/file.put/bg/index.png);background-repeat: no-repeat;background-position: center center;background-attachment: fixed;background-size: cover;">
   <h1 class="z3" style="font-size: 4rem">
     <a href="test.htm" style="color: #2ecc71"> WEL </a>
   </h1>
@@ -27,17 +27,17 @@
     <img src="res/DE/1.jpg" width="50%" />
   </a>
   <a href="F.htm">
-    <img src="https://github.com/UTAC99645/file.put/blob/main/res/F.02.jpg?raw=true" width="49%" />
+    <img src="https://utac99645.github.io/file.put/res/F.02.jpg" width="49%" />
   </a>
   <table>
     <tr>
       <video autoplay poster="res/Lod.gif" width="50%" loop>
-        <source src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
+        <source src="https://utac99645.github.io/file.put/res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
       </video>
     </tr>
     <tr>
       <video autoplay poster="res/Lod.gif" width="50%" loop>
-        <source src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/bau.mp4" type="video/mp4">
+        <source src="https://utac99645.github.io/file.put/res/bau.mp4" type="video/mp4">
       </video>
     </tr>
   </table>
