--- a/test.htm
+++ b/test.htm
@@ -1,5 +1,5 @@
 <html style="
-        background-image: url(https://nmgimg.www.panguidc.com/2024/08/24/592f4ff07d2edc158cc9011def6126a8.png);
+        background-image: url(https://utac99645.github.io/file.put/bg/test.png);
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
