--- a/about/!.htm
+++ b/about/!.htm
@@ -1,15 +1,15 @@
-<html style="background-image:url('http://www.panguidc.com/images/2024/08/21/96bbf0c2a3fa0ab48833336a90569a16.webp');
+<html style="background-image:url(https://utac99645.github.io/file.put/bg/!.jpg);
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
-<img src="L/!.png" width="75%" hspace="12.5%">
+<img src="https://utac99645.github.io/file.put/res/m/webwxgetmsgimg.jpg" width="75%" hspace="12.5%">
 <h1 style="text-align:center;color: yellow">
   她们在等你!
 </h1>
 <hr>
 <a href="power.htm">
-  <img src="https://github.com/UTAC99645/file.put/blob/main/res/L/n.jpg?raw=true" width="49%" align="lift">
+  <img src="https://utac99645.github.io/file.put/res/L/n.jpg" width="49%" align="lift">
 </a>
 <a href="lu.htm">
-  <img src="https://github.com/UTAC99645/file.put/blob/main/res/L/y.jpg?raw=true" width="49%" align="right">
+  <img src="https://utac99645.github.io/file.put/res/L/y.jpg" width="49%" align="right">
 </a>
 </html>
