--- a/about/about.htm
+++ b/about/about.htm
@@ -9,7 +9,7 @@
   支持
 </title>
 
-<body style="background-image:url('http://www.panguidc.com/images/2024/08/20/a5ecf719426b7955f839ec6bfce4e58a.png');
+<body style="background-image:url('https://utac99645.github.io/file.put/bg/about.png');
   background-repeat:no-repeat; background-position:center center;
   background-attachment:fixed; background-size:cover;">
   <a href="power.htm">
@@ -17,7 +17,7 @@
       ABOUT.2
     </h1>
   </a>
-  <img hspace="25%" width="50%" src="https://github.com/UTAC99645/file.put/blob/main/res/m/m.png?raw=true">
+  <img hspace="25%" width="50%" src="https://utac99645.github.io/file.put/res/m/m.png">
   <h1 class="name">
     NAME
   </h1>
