--- a/sb.htm
+++ b/sb.htm
@@ -2,8 +2,8 @@
 <title>
   NEVER
 </title>
-<video src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/v/rrg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
-<video src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/v/rrg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
-<video src="https://github.com/UTAC99645/file.put/raw/refs/heads/main/res/v/rrg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
+<video src="https://utac99645.github.io/file.put/res/v/rrg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
+<video src="https://utac99645.github.io/file.put/res/v/rrg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
+<video src="https://utac99645.github.io/file.put/res/v/rrg.mp4" loop autoplay poster="res/Lod.gif" width="100%"></video>
 
 </html>
