--- a/about/work.htm
+++ b/about/work.htm
@@ -1,100 +1,142 @@
-<html style="background-image:url(https://utac99645.github.io/file.put/bg/work.png);
-background-repeat:no-repeat; background-position:center center;
-background-attachment:fixed; background-size:cover;">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" href="S/c.css">
-  <link rel="stylesheet" href="S/color.css">
-  <style>
-    img{
-      clear: both;
-      display: block;
-      margin: auto;
-
-    }
-  </style>
+  <title>工作</title>
+  <link rel="stylesheet" href="/sh/style.css">
+  <link rel="stylesheet" href="/about/S/c.css">
+  <link rel="stylesheet" href="/about/S/color.css">
+  <link rel="stylesheet" href="S/work.css">
 </head>
 
 <body>
-  <div>
-    <h1>
-      MY WORKED
-    </h1>
-    <h1>
-      NAME
-    </h1>
-    <h1>
-      EASY NOTE
-    </h1>
-    </dev>
-    <hr>
-    <dev>
-      <a href="https://github.com/Kin69/EasyNotes/">
-      <img width="50%" src="https://raw.githubusercontent.com/Kin69/EasyNotes/master/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.webp">
-      </a>
-  </div>
-  <div>
-    <h1>
-      主要工作
-    </h1>
-    <br>
-    <h1>
-      翻译:中文
-    </h1>
-  </div>
-  <div>
-    <a href="https://github.com/Kin69/EasyNotes/releases/download/Nightly/EasyNotes-nightly.apk">
-      <img width="35%" src="https://raw.githubusercontent.com/Kin69/EasyNotes/master/.github/nightly.png">
+  <header>
+        <a href="https://space.bilibili.com/3493135598487801" class="logo">
+      Hard_Driver
     </a>
-  </div>
-  <hr>
-  <div>
-    <h1>
-      NAME
-    </h1>
-    <h1>
-      Compass
-    </h1>
-    </dev>
-    <hr>
-    <dev>
-      <a href="https://github.com/Kr0oked/Compass">
-      <img width="50%" src="https://github.com/Kr0oked/Compass/blob/master/fastlane/metadata/android/en-US/images/icon.png?raw=true">
-      </a>
-  </div>
-  <div>
-    <h1>
-      主要工作
-    </h1>
-    <br>
-    <h1>
-      翻译:中文
-    </h1>
-    <h1>
+    <ul>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/about/about.htm">About</a></li>
+      <li><a class="active" href="/about/work.htm">Work</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </header>
+  <section>
+    <img src="/res/DE/1.jpg" id="stars">
+    <img src="/res/images/moon.png" id="moon">
+    <img src="/bg/01.png" id="mountains_behind">
+    <h2 id="text">UTAC99645</h2>
+    <a href="#sec" id="btn">Explore</a>
+    <img src="/res/images/mountains_front.png" id="mountains_front">
+  </section>
+  <div class="sec" id="sec">
+    <h2>
+      <main>shsfZ</main>
+    </h2>
+    <p>
+    <div>
+      <h1>
+        NAME
+      </h1>
+      <h1>
+        EASY NOTE
+      </h1>
+      </dev>
+      <hr>
+      <dev>
+        <a href="https://github.com/Kin69/EasyNotes/">
+          <img class="logo" width="50%"
+            src="https://raw.githubusercontent.com/Kin69/EasyNotes/master/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.webp">
+        </a>
+    </div>
+    <div>
+      <h1>
+        主要工作
+      </h1>
       <br>
-      特别鸣谢:我的儿子:ddxgyff
-    </h1>
-    <h1 style="font-size: 5%">
-      已被真实
-    </h1>
+      <h1>
+        翻译:中文
+      </h1>
+    </div>
+    <div>
+      <a href="https://github.com/Kin69/EasyNotes/releases/download/Nightly/EasyNotes-nightly.apk">
+        <img class="logo" width="35%"
+          src="https://raw.githubusercontent.com/Kin69/EasyNotes/master/.github/nightly.png">
+      </a>
+    </div>
+    <hr>
+    <div>
+      <h1>
+        NAME
+      </h1>
+      <h1>
+        Compass
+      </h1>
+      </dev>
+      <hr>
+      <dev>
+        <a href="https://github.com/Kr0oked/Compass">
+          <img class="logo" width="50%"
+            src="https://github.com/Kr0oked/Compass/blob/master/fastlane/metadata/android/en-US/images/icon.png?raw=true">
+        </a>
+    </div>
+    <div>
+      <h1>
+        主要工作
+      </h1>
+      <br>
+      <h1>
+        翻译:中文
+      </h1>
+      <h1>
+        <br>
+        特别鸣谢:我的儿子:ddxgyff
+      </h1>
+      <h1 style="font-size: 5%">
+        已被真实
+      </h1>
+    </div>
+    <!--  他是个鸡巴啊
+          他是个鸡巴啊
+          他是个鸡巴啊
+          他是个鸡巴啊
+          他是个鸡巴啊
+    -->
+    <div>
+      <a href="https://play.google.com/store/apps/details?id=com.bobek.compass">
+        <img class="logo" width="45%"
+          src="https://camo.githubusercontent.com/1ddf90e524a4bfe8b77f9a6902d54fc708380389b7e0d7f9ad29196a799e77db/68747470733a2f2f706c61792e676f6f676c652e636f6d2f696e746c2f656e5f75732f6261646765732f696d616765732f67656e657269632f656e2d706c61792d62616467652e706e67">
+      </a>
+    </div>
+    <hr>
+    <div>
+      <h1>
+        还会有更多的!
+      </h1>
+    </div>
+    </p>
   </div>
-<!--  他是个鸡巴啊
-      他是个鸡巴啊
-      他是个鸡巴啊
-      他是个鸡巴啊
-      他是个鸡巴啊
--->
-  <div>
-    <a href="https://play.google.com/store/apps/details?id=com.bobek.compass">
-      <img width="45%" src="https://camo.githubusercontent.com/1ddf90e524a4bfe8b77f9a6902d54fc708380389b7e0d7f9ad29196a799e77db/68747470733a2f2f706c61792e676f6f676c652e636f6d2f696e746c2f656e5f75732f6261646765732f696d616765732f67656e657269632f656e2d706c61792d62616467652e706e67">
-    </a>
-  </div>
-  <hr>
-  <div>
-    <h1>
-      还会有更多的!
-    </h1>
-  </div>
+
+  <script>
+    let stars = document.getElementById('stars')
+    let mountains_behind = document.getElementById('mountains_behind')
+    let text = document.getElementById('text')
+    let btn = document.getElementById('btn')
+    let mountains_front = document.getElementById('mountains_front')
+    let header = document.querySelector('header')
+
+    window.addEventListener('scroll', function () {
+      let value = window.scrollY;
+      stars.style.left = value * 0.25 + 'px'
+      moon.style.top = value * 1.05 + 'px'
+      mountains_behind.style.top = value * 0.5 + 'px'
+      mountains_front.style.top = value * 0 + 'px'
+      text.style.marginRight = value * 4 + 'px'
+      text.style.marginTop = value * 1.5 + 'px'
+      btn.style.marginTop = value * 1.5 + 'px'
+      header.style.top = value * 0.5 + 'px'
+    })
+  </script>
 </body>
 
 </html>
